Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4200

Test failure on test suite conf-sanity test_66: replace nids failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.6.0
    • None
    • None
    • 3
    • 11419

      This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>

      This issue relates to the following test suite run:
      http://maloo.whamcloud.com/test_sets/d95b0f48-264f-11e3-8f1c-52540035b04c
      http://maloo.whamcloud.com/test_sets/2d26cba2-266f-11e3-b741-52540035b04c

      The sub-test test_66 failed with the following error:

      replace nids failed

      Info required for matching: conf-sanity 66

            utopiabound Nathaniel Clark
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: