LU-4200 tests: Add debugging for replace_nids errors

During conf-sanity/66 lctl replace_nids returns "Operation now in
progress" which comes from an error in mgs_llog.c::mgs_replace_nids()
failing the only_mgs_is_running test.

This code will print the paramters that only_mgs_is_running() makes
it's determination on, to hopefully determine why it's failing.

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: I523704b6fda3d600347c27d78d39bdd887602e28